lang.output
Terminals unused in grammar

    CHAR_VAL
    JUNK_TOKEN


Grammar

    0 $accept: program $end

    1 program: PROGRAM block

    2 block: open decls stmts close
    3      | open stmts close

    4 open: '{'

    5 close: '}'

    6 decls: decls decl
    7      | decl

    8 decl: var_decl ';'
    9     | array_decl ';'
   10     | struct_decl ';'
   11     | func_decl

   12 var_decl: TYPE_ID IDENTIFIER

   13 struct_decl: STRUCT open decls close IDENTIFIER

   14 array_decl: ARRAY TYPE_ID '[' INT_VAL ']' IDENTIFIER

   15 func_decl: func_header ';'
   16          | func_header '{' decls stmts '}'
   17          | func_header '{' stmts '}'

   18 func_header: func_prefix paramsspec ')'
   19            | func_prefix ')'

   20 func_prefix: TYPE_ID IDENTIFIER '('

   21 paramsspec: paramsspec ',' paramspec
   22           | paramspec

   23 paramspec: var_decl

   24 stmts: stmts stmt
   25      | stmt

   26 stmt: IF '(' expr ')' stmts ENDIF ';'
   27     | IF '(' expr ')' stmts ELSE stmts ENDIF ';'
   28     | WHILE '(' expr ')' stmt
   29     | PRINT '(' expr ')' ';'
   30     | PRINTS '(' STRING_LIT ')' ';'
   31     | lval '=' expr ';'
   32     | func_call ';'
   33     | block
   34     | RETURN expr ';'
   35     | error ';'

   36 func_call: IDENTIFIER '(' params ')'
   37          | IDENTIFIER '(' ')'

   38 varref: IDENTIFIER

   39 lval: varref

   40 params: params ',' param
   41       | param

   42 param: expr

   43 expr: expr EQUALS addit
   44     | expr NOT_EQUALS addit
   45     | expr '<' addit
   46     | expr '>' addit
   47     | expr LE addit
   48     | expr GE addit
   49     | expr AND addit
   50     | expr OR addit
   51     | addit

   52 addit: addit '+' term
   53      | addit '-' term
   54      | term

   55 term: term '*' fact
   56     | term '/' fact
   57     | term '%' fact
   58     | fact

   59 fact: '(' expr ')'
   60     | INT_VAL
   61     | FLOAT_VAL
   62     | varref
   63     | func_call


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 57
    '(' (40) 20 26 27 28 29 30 36 37 59
    ')' (41) 18 19 26 27 28 29 30 36 37 59
    '*' (42) 55
    '+' (43) 52
    ',' (44) 21 40
    '-' (45) 53
    '/' (47) 56
    ';' (59) 8 9 10 15 26 27 29 30 31 32 34 35
    '<' (60) 45
    '=' (61) 31
    '>' (62) 46
    '[' (91) 14
    ']' (93) 14
    '{' (123) 4 16 17
    '}' (125) 5 16 17
    error (256) 35
    IDENTIFIER <symbol> (258) 12 13 14 20 36 37 38
    TYPE_ID <symbol> (259) 12 14 20
    CHAR_VAL <int_val> (260)
    INT_VAL <int_val> (261) 14 60
    FLOAT_VAL <float_val> (262) 61
    LE <int_val> (263) 47
    GE <int_val> (264) 48
    AND <int_val> (265) 49
    OR <int_val> (266) 50
    EQUALS <int_val> (267) 43
    NOT_EQUALS <int_val> (268) 44
    STRING_LIT <str_val> (269) 30
    PROGRAM (270) 1
    PRINT (271) 29
    PRINTS (272) 30
    WHILE (273) 28
    IF (274) 26 27
    ELSE (275) 27
    ENDIF (276) 26 27
    STRUCT (277) 13
    ARRAY (278) 14
    RETURN (279) 34
    JUNK_TOKEN (280)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    program <program_node> (43)
        on left: 1
        on right: 0
    block <block_node> (44)
        on left: 2 3
        on right: 1 33
    open <ast_node> (45)
        on left: 4
        on right: 2 3 13
    close <ast_node> (46)
        on left: 5
        on right: 2 3 13
    decls <decls_node> (47)
        on left: 6 7
        on right: 2 6 13 16
    decl <decl_node> (48)
        on left: 8 9 10 11
        on right: 6 7
    var_decl <var_decl_node> (49)
        on left: 12
        on right: 8 23
    struct_decl <ast_node> (50)
        on left: 13
        on right: 10
    array_decl <ast_node> (51)
        on left: 14
        on right: 9
    func_decl <ast_node> (52)
        on left: 15 16 17
        on right: 11
    func_header <ast_node> (53)
        on left: 18 19
        on right: 15 16 17
    func_prefix <ast_node> (54)
        on left: 20
        on right: 18 19
    paramsspec <ast_node> (55)
        on left: 21 22
        on right: 18 21
    paramspec <ast_node> (56)
        on left: 23
        on right: 21 22
    stmts <stmts_node> (57)
        on left: 24 25
        on right: 2 3 16 17 24 26 27
    stmt <stmt_node> (58)
        on left: 26 27 28 29 30 31 32 33 34 35
        on right: 24 25 28
    func_call <expr_node> (59)
        on left: 36 37
        on right: 32 63
    varref <expr_node> (60)
        on left: 38
        on right: 39 62
    lval <ast_node> (61)
        on left: 39
        on right: 31
    params <ast_node> (62)
        on left: 40 41
        on right: 36 40
    param <ast_node> (63)
        on left: 42
        on right: 40 41
    expr <expr_node> (64)
        on left: 43 44 45 46 47 48 49 50 51
        on right: 26 27 28 29 31 34 42 43 44 45 46 47 48 49 50 59
    addit <expr_node> (65)
        on left: 52 53 54
        on right: 43 44 45 46 47 48 49 50 51 52 53
    term <expr_node> (66)
        on left: 55 56 57 58
        on right: 52 53 54 55 56 57
    fact <expr_node> (67)
        on left: 59 60 61 62 63
        on right: 55 56 57 58


State 0

    0 $accept: • program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM • block

    '{'  shift, and go to state 3

    block  go to state 4
    open   go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    4 open: '{' •

    $default  reduce using rule 4 (open)


State 4

    1 program: PROGRAM block •

    $default  reduce using rule 1 (program)


State 5

    2 block: open • decls stmts close
    3      | open • stmts close

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    TYPE_ID     shift, and go to state 9
    PRINT       shift, and go to state 10
    PRINTS      shift, and go to state 11
    WHILE       shift, and go to state 12
    IF          shift, and go to state 13
    STRUCT      shift, and go to state 14
    ARRAY       shift, and go to state 15
    RETURN      shift, and go to state 16
    '{'         shift, and go to state 3

    block        go to state 17
    open         go to state 5
    decls        go to state 18
    decl         go to state 19
    var_decl     go to state 20
    struct_decl  go to state 21
    array_decl   go to state 22
    func_decl    go to state 23
    func_header  go to state 24
    func_prefix  go to state 25
    stmts        go to state 26
    stmt         go to state 27
    func_call    go to state 28
    varref       go to state 29
    lval         go to state 30


State 6

    0 $accept: program $end •

    $default  accept


State 7

   35 stmt: error • ';'

    ';'  shift, and go to state 31


State 8

   36 func_call: IDENTIFIER • '(' params ')'
   37          | IDENTIFIER • '(' ')'
   38 varref: IDENTIFIER •

    '('  shift, and go to state 32

    $default  reduce using rule 38 (varref)


State 9

   12 var_decl: TYPE_ID • IDENTIFIER
   20 func_prefix: TYPE_ID • IDENTIFIER '('

    IDENTIFIER  shift, and go to state 33


State 10

   29 stmt: PRINT • '(' expr ')' ';'

    '('  shift, and go to state 34


State 11

   30 stmt: PRINTS • '(' STRING_LIT ')' ';'

    '('  shift, and go to state 35


State 12

   28 stmt: WHILE • '(' expr ')' stmt

    '('  shift, and go to state 36


State 13

   26 stmt: IF • '(' expr ')' stmts ENDIF ';'
   27     | IF • '(' expr ')' stmts ELSE stmts ENDIF ';'

    '('  shift, and go to state 37


State 14

   13 struct_decl: STRUCT • open decls close IDENTIFIER

    '{'  shift, and go to state 3

    open  go to state 38


State 15

   14 array_decl: ARRAY • TYPE_ID '[' INT_VAL ']' IDENTIFIER

    TYPE_ID  shift, and go to state 39


State 16

   34 stmt: RETURN • expr ';'

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    expr       go to state 45
    addit      go to state 46
    term       go to state 47
    fact       go to state 48


State 17

   33 stmt: block •

    $default  reduce using rule 33 (stmt)


State 18

    2 block: open decls • stmts close
    6 decls: decls • decl

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    TYPE_ID     shift, and go to state 9
    PRINT       shift, and go to state 10
    PRINTS      shift, and go to state 11
    WHILE       shift, and go to state 12
    IF          shift, and go to state 13
    STRUCT      shift, and go to state 14
    ARRAY       shift, and go to state 15
    RETURN      shift, and go to state 16
    '{'         shift, and go to state 3

    block        go to state 17
    open         go to state 5
    decl         go to state 49
    var_decl     go to state 20
    struct_decl  go to state 21
    array_decl   go to state 22
    func_decl    go to state 23
    func_header  go to state 24
    func_prefix  go to state 25
    stmts        go to state 50
    stmt         go to state 27
    func_call    go to state 28
    varref       go to state 29
    lval         go to state 30


State 19

    7 decls: decl •

    $default  reduce using rule 7 (decls)


State 20

    8 decl: var_decl • ';'

    ';'  shift, and go to state 51


State 21

   10 decl: struct_decl • ';'

    ';'  shift, and go to state 52


State 22

    9 decl: array_decl • ';'

    ';'  shift, and go to state 53


State 23

   11 decl: func_decl •

    $default  reduce using rule 11 (decl)


State 24

   15 func_decl: func_header • ';'
   16          | func_header • '{' decls stmts '}'
   17          | func_header • '{' stmts '}'

    '{'  shift, and go to state 54
    ';'  shift, and go to state 55


State 25

   18 func_header: func_prefix • paramsspec ')'
   19            | func_prefix • ')'

    TYPE_ID  shift, and go to state 56
    ')'      shift, and go to state 57

    var_decl    go to state 58
    paramsspec  go to state 59
    paramspec   go to state 60


State 26

    3 block: open stmts • close
   24 stmts: stmts • stmt

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    PRINT       shift, and go to state 10
    PRINTS      shift, and go to state 11
    WHILE       shift, and go to state 12
    IF          shift, and go to state 13
    RETURN      shift, and go to state 16
    '{'         shift, and go to state 3
    '}'         shift, and go to state 61

    block      go to state 17
    open       go to state 5
    close      go to state 62
    stmt       go to state 63
    func_call  go to state 28
    varref     go to state 29
    lval       go to state 30


State 27

   25 stmts: stmt •

    $default  reduce using rule 25 (stmts)


State 28

   32 stmt: func_call • ';'

    ';'  shift, and go to state 64


State 29

   39 lval: varref •

    $default  reduce using rule 39 (lval)


State 30

   31 stmt: lval • '=' expr ';'

    '='  shift, and go to state 65


State 31

   35 stmt: error ';' •

    $default  reduce using rule 35 (stmt)


State 32

   36 func_call: IDENTIFIER '(' • params ')'
   37          | IDENTIFIER '(' • ')'

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    ')'         shift, and go to state 66
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    params     go to state 67
    param      go to state 68
    expr       go to state 69
    addit      go to state 46
    term       go to state 47
    fact       go to state 48


State 33

   12 var_decl: TYPE_ID IDENTIFIER •
   20 func_prefix: TYPE_ID IDENTIFIER • '('

    '('  shift, and go to state 70

    $default  reduce using rule 12 (var_decl)


State 34

   29 stmt: PRINT '(' • expr ')' ';'

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    expr       go to state 71
    addit      go to state 46
    term       go to state 47
    fact       go to state 48


State 35

   30 stmt: PRINTS '(' • STRING_LIT ')' ';'

    STRING_LIT  shift, and go to state 72


State 36

   28 stmt: WHILE '(' • expr ')' stmt

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    expr       go to state 73
    addit      go to state 46
    term       go to state 47
    fact       go to state 48


State 37

   26 stmt: IF '(' • expr ')' stmts ENDIF ';'
   27     | IF '(' • expr ')' stmts ELSE stmts ENDIF ';'

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    expr       go to state 74
    addit      go to state 46
    term       go to state 47
    fact       go to state 48


State 38

   13 struct_decl: STRUCT open • decls close IDENTIFIER

    TYPE_ID  shift, and go to state 9
    STRUCT   shift, and go to state 14
    ARRAY    shift, and go to state 15

    decls        go to state 75
    decl         go to state 19
    var_decl     go to state 20
    struct_decl  go to state 21
    array_decl   go to state 22
    func_decl    go to state 23
    func_header  go to state 24
    func_prefix  go to state 25


State 39

   14 array_decl: ARRAY TYPE_ID • '[' INT_VAL ']' IDENTIFIER

    '['  shift, and go to state 76


State 40

   60 fact: INT_VAL •

    $default  reduce using rule 60 (fact)


State 41

   61 fact: FLOAT_VAL •

    $default  reduce using rule 61 (fact)


State 42

   59 fact: '(' • expr ')'

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    expr       go to state 77
    addit      go to state 46
    term       go to state 47
    fact       go to state 48


State 43

   63 fact: func_call •

    $default  reduce using rule 63 (fact)


State 44

   62 fact: varref •

    $default  reduce using rule 62 (fact)


State 45

   34 stmt: RETURN expr • ';'
   43 expr: expr • EQUALS addit
   44     | expr • NOT_EQUALS addit
   45     | expr • '<' addit
   46     | expr • '>' addit
   47     | expr • LE addit
   48     | expr • GE addit
   49     | expr • AND addit
   50     | expr • OR addit

    LE          shift, and go to state 78
    GE          shift, and go to state 79
    AND         shift, and go to state 80
    OR          shift, and go to state 81
    EQUALS      shift, and go to state 82
    NOT_EQUALS  shift, and go to state 83
    ';'         shift, and go to state 84
    '<'         shift, and go to state 85
    '>'         shift, and go to state 86


State 46

   51 expr: addit •
   52 addit: addit • '+' term
   53      | addit • '-' term

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88

    $default  reduce using rule 51 (expr)


State 47

   54 addit: term •
   55 term: term • '*' fact
   56     | term • '/' fact
   57     | term • '%' fact

    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '%'  shift, and go to state 91

    $default  reduce using rule 54 (addit)


State 48

   58 term: fact •

    $default  reduce using rule 58 (term)


State 49

    6 decls: decls decl •

    $default  reduce using rule 6 (decls)


State 50

    2 block: open decls stmts • close
   24 stmts: stmts • stmt

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    PRINT       shift, and go to state 10
    PRINTS      shift, and go to state 11
    WHILE       shift, and go to state 12
    IF          shift, and go to state 13
    RETURN      shift, and go to state 16
    '{'         shift, and go to state 3
    '}'         shift, and go to state 61

    block      go to state 17
    open       go to state 5
    close      go to state 92
    stmt       go to state 63
    func_call  go to state 28
    varref     go to state 29
    lval       go to state 30


State 51

    8 decl: var_decl ';' •

    $default  reduce using rule 8 (decl)


State 52

   10 decl: struct_decl ';' •

    $default  reduce using rule 10 (decl)


State 53

    9 decl: array_decl ';' •

    $default  reduce using rule 9 (decl)


State 54

   16 func_decl: func_header '{' • decls stmts '}'
   17          | func_header '{' • stmts '}'

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    TYPE_ID     shift, and go to state 9
    PRINT       shift, and go to state 10
    PRINTS      shift, and go to state 11
    WHILE       shift, and go to state 12
    IF          shift, and go to state 13
    STRUCT      shift, and go to state 14
    ARRAY       shift, and go to state 15
    RETURN      shift, and go to state 16
    '{'         shift, and go to state 3

    block        go to state 17
    open         go to state 5
    decls        go to state 93
    decl         go to state 19
    var_decl     go to state 20
    struct_decl  go to state 21
    array_decl   go to state 22
    func_decl    go to state 23
    func_header  go to state 24
    func_prefix  go to state 25
    stmts        go to state 94
    stmt         go to state 27
    func_call    go to state 28
    varref       go to state 29
    lval         go to state 30


State 55

   15 func_decl: func_header ';' •

    $default  reduce using rule 15 (func_decl)


State 56

   12 var_decl: TYPE_ID • IDENTIFIER

    IDENTIFIER  shift, and go to state 95


State 57

   19 func_header: func_prefix ')' •

    $default  reduce using rule 19 (func_header)


State 58

   23 paramspec: var_decl •

    $default  reduce using rule 23 (paramspec)


State 59

   18 func_header: func_prefix paramsspec • ')'
   21 paramsspec: paramsspec • ',' paramspec

    ')'  shift, and go to state 96
    ','  shift, and go to state 97


State 60

   22 paramsspec: paramspec •

    $default  reduce using rule 22 (paramsspec)


State 61

    5 close: '}' •

    $default  reduce using rule 5 (close)


State 62

    3 block: open stmts close •

    $default  reduce using rule 3 (block)


State 63

   24 stmts: stmts stmt •

    $default  reduce using rule 24 (stmts)


State 64

   32 stmt: func_call ';' •

    $default  reduce using rule 32 (stmt)


State 65

   31 stmt: lval '=' • expr ';'

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    expr       go to state 98
    addit      go to state 46
    term       go to state 47
    fact       go to state 48


State 66

   37 func_call: IDENTIFIER '(' ')' •

    $default  reduce using rule 37 (func_call)


State 67

   36 func_call: IDENTIFIER '(' params • ')'
   40 params: params • ',' param

    ')'  shift, and go to state 99
    ','  shift, and go to state 100


State 68

   41 params: param •

    $default  reduce using rule 41 (params)


State 69

   42 param: expr •
   43 expr: expr • EQUALS addit
   44     | expr • NOT_EQUALS addit
   45     | expr • '<' addit
   46     | expr • '>' addit
   47     | expr • LE addit
   48     | expr • GE addit
   49     | expr • AND addit
   50     | expr • OR addit

    LE          shift, and go to state 78
    GE          shift, and go to state 79
    AND         shift, and go to state 80
    OR          shift, and go to state 81
    EQUALS      shift, and go to state 82
    NOT_EQUALS  shift, and go to state 83
    '<'         shift, and go to state 85
    '>'         shift, and go to state 86

    $default  reduce using rule 42 (param)


State 70

   20 func_prefix: TYPE_ID IDENTIFIER '(' •

    $default  reduce using rule 20 (func_prefix)


State 71

   29 stmt: PRINT '(' expr • ')' ';'
   43 expr: expr • EQUALS addit
   44     | expr • NOT_EQUALS addit
   45     | expr • '<' addit
   46     | expr • '>' addit
   47     | expr • LE addit
   48     | expr • GE addit
   49     | expr • AND addit
   50     | expr • OR addit

    LE          shift, and go to state 78
    GE          shift, and go to state 79
    AND         shift, and go to state 80
    OR          shift, and go to state 81
    EQUALS      shift, and go to state 82
    NOT_EQUALS  shift, and go to state 83
    ')'         shift, and go to state 101
    '<'         shift, and go to state 85
    '>'         shift, and go to state 86


State 72

   30 stmt: PRINTS '(' STRING_LIT • ')' ';'

    ')'  shift, and go to state 102


State 73

   28 stmt: WHILE '(' expr • ')' stmt
   43 expr: expr • EQUALS addit
   44     | expr • NOT_EQUALS addit
   45     | expr • '<' addit
   46     | expr • '>' addit
   47     | expr • LE addit
   48     | expr • GE addit
   49     | expr • AND addit
   50     | expr • OR addit

    LE          shift, and go to state 78
    GE          shift, and go to state 79
    AND         shift, and go to state 80
    OR          shift, and go to state 81
    EQUALS      shift, and go to state 82
    NOT_EQUALS  shift, and go to state 83
    ')'         shift, and go to state 103
    '<'         shift, and go to state 85
    '>'         shift, and go to state 86


State 74

   26 stmt: IF '(' expr • ')' stmts ENDIF ';'
   27     | IF '(' expr • ')' stmts ELSE stmts ENDIF ';'
   43 expr: expr • EQUALS addit
   44     | expr • NOT_EQUALS addit
   45     | expr • '<' addit
   46     | expr • '>' addit
   47     | expr • LE addit
   48     | expr • GE addit
   49     | expr • AND addit
   50     | expr • OR addit

    LE          shift, and go to state 78
    GE          shift, and go to state 79
    AND         shift, and go to state 80
    OR          shift, and go to state 81
    EQUALS      shift, and go to state 82
    NOT_EQUALS  shift, and go to state 83
    ')'         shift, and go to state 104
    '<'         shift, and go to state 85
    '>'         shift, and go to state 86


State 75

    6 decls: decls • decl
   13 struct_decl: STRUCT open decls • close IDENTIFIER

    TYPE_ID  shift, and go to state 9
    STRUCT   shift, and go to state 14
    ARRAY    shift, and go to state 15
    '}'      shift, and go to state 61

    close        go to state 105
    decl         go to state 49
    var_decl     go to state 20
    struct_decl  go to state 21
    array_decl   go to state 22
    func_decl    go to state 23
    func_header  go to state 24
    func_prefix  go to state 25


State 76

   14 array_decl: ARRAY TYPE_ID '[' • INT_VAL ']' IDENTIFIER

    INT_VAL  shift, and go to state 106


State 77

   43 expr: expr • EQUALS addit
   44     | expr • NOT_EQUALS addit
   45     | expr • '<' addit
   46     | expr • '>' addit
   47     | expr • LE addit
   48     | expr • GE addit
   49     | expr • AND addit
   50     | expr • OR addit
   59 fact: '(' expr • ')'

    LE          shift, and go to state 78
    GE          shift, and go to state 79
    AND         shift, and go to state 80
    OR          shift, and go to state 81
    EQUALS      shift, and go to state 82
    NOT_EQUALS  shift, and go to state 83
    ')'         shift, and go to state 107
    '<'         shift, and go to state 85
    '>'         shift, and go to state 86


State 78

   47 expr: expr LE • addit

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    addit      go to state 108
    term       go to state 47
    fact       go to state 48


State 79

   48 expr: expr GE • addit

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    addit      go to state 109
    term       go to state 47
    fact       go to state 48


State 80

   49 expr: expr AND • addit

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    addit      go to state 110
    term       go to state 47
    fact       go to state 48


State 81

   50 expr: expr OR • addit

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    addit      go to state 111
    term       go to state 47
    fact       go to state 48


State 82

   43 expr: expr EQUALS • addit

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    addit      go to state 112
    term       go to state 47
    fact       go to state 48


State 83

   44 expr: expr NOT_EQUALS • addit

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    addit      go to state 113
    term       go to state 47
    fact       go to state 48


State 84

   34 stmt: RETURN expr ';' •

    $default  reduce using rule 34 (stmt)


State 85

   45 expr: expr '<' • addit

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    addit      go to state 114
    term       go to state 47
    fact       go to state 48


State 86

   46 expr: expr '>' • addit

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    addit      go to state 115
    term       go to state 47
    fact       go to state 48


State 87

   52 addit: addit '+' • term

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    term       go to state 116
    fact       go to state 48


State 88

   53 addit: addit '-' • term

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    term       go to state 117
    fact       go to state 48


State 89

   55 term: term '*' • fact

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    fact       go to state 118


State 90

   56 term: term '/' • fact

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    fact       go to state 119


State 91

   57 term: term '%' • fact

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    fact       go to state 120


State 92

    2 block: open decls stmts close •

    $default  reduce using rule 2 (block)


State 93

    6 decls: decls • decl
   16 func_decl: func_header '{' decls • stmts '}'

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    TYPE_ID     shift, and go to state 9
    PRINT       shift, and go to state 10
    PRINTS      shift, and go to state 11
    WHILE       shift, and go to state 12
    IF          shift, and go to state 13
    STRUCT      shift, and go to state 14
    ARRAY       shift, and go to state 15
    RETURN      shift, and go to state 16
    '{'         shift, and go to state 3

    block        go to state 17
    open         go to state 5
    decl         go to state 49
    var_decl     go to state 20
    struct_decl  go to state 21
    array_decl   go to state 22
    func_decl    go to state 23
    func_header  go to state 24
    func_prefix  go to state 25
    stmts        go to state 121
    stmt         go to state 27
    func_call    go to state 28
    varref       go to state 29
    lval         go to state 30


State 94

   17 func_decl: func_header '{' stmts • '}'
   24 stmts: stmts • stmt

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    PRINT       shift, and go to state 10
    PRINTS      shift, and go to state 11
    WHILE       shift, and go to state 12
    IF          shift, and go to state 13
    RETURN      shift, and go to state 16
    '{'         shift, and go to state 3
    '}'         shift, and go to state 122

    block      go to state 17
    open       go to state 5
    stmt       go to state 63
    func_call  go to state 28
    varref     go to state 29
    lval       go to state 30


State 95

   12 var_decl: TYPE_ID IDENTIFIER •

    $default  reduce using rule 12 (var_decl)


State 96

   18 func_header: func_prefix paramsspec ')' •

    $default  reduce using rule 18 (func_header)


State 97

   21 paramsspec: paramsspec ',' • paramspec

    TYPE_ID  shift, and go to state 56

    var_decl   go to state 58
    paramspec  go to state 123


State 98

   31 stmt: lval '=' expr • ';'
   43 expr: expr • EQUALS addit
   44     | expr • NOT_EQUALS addit
   45     | expr • '<' addit
   46     | expr • '>' addit
   47     | expr • LE addit
   48     | expr • GE addit
   49     | expr • AND addit
   50     | expr • OR addit

    LE          shift, and go to state 78
    GE          shift, and go to state 79
    AND         shift, and go to state 80
    OR          shift, and go to state 81
    EQUALS      shift, and go to state 82
    NOT_EQUALS  shift, and go to state 83
    ';'         shift, and go to state 124
    '<'         shift, and go to state 85
    '>'         shift, and go to state 86


State 99

   36 func_call: IDENTIFIER '(' params ')' •

    $default  reduce using rule 36 (func_call)


State 100

   40 params: params ',' • param

    IDENTIFIER  shift, and go to state 8
    INT_VAL     shift, and go to state 40
    FLOAT_VAL   shift, and go to state 41
    '('         shift, and go to state 42

    func_call  go to state 43
    varref     go to state 44
    param      go to state 125
    expr       go to state 69
    addit      go to state 46
    term       go to state 47
    fact       go to state 48


State 101

   29 stmt: PRINT '(' expr ')' • ';'

    ';'  shift, and go to state 126


State 102

   30 stmt: PRINTS '(' STRING_LIT ')' • ';'

    ';'  shift, and go to state 127


State 103

   28 stmt: WHILE '(' expr ')' • stmt

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    PRINT       shift, and go to state 10
    PRINTS      shift, and go to state 11
    WHILE       shift, and go to state 12
    IF          shift, and go to state 13
    RETURN      shift, and go to state 16
    '{'         shift, and go to state 3

    block      go to state 17
    open       go to state 5
    stmt       go to state 128
    func_call  go to state 28
    varref     go to state 29
    lval       go to state 30


State 104

   26 stmt: IF '(' expr ')' • stmts ENDIF ';'
   27     | IF '(' expr ')' • stmts ELSE stmts ENDIF ';'

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    PRINT       shift, and go to state 10
    PRINTS      shift, and go to state 11
    WHILE       shift, and go to state 12
    IF          shift, and go to state 13
    RETURN      shift, and go to state 16
    '{'         shift, and go to state 3

    block      go to state 17
    open       go to state 5
    stmts      go to state 129
    stmt       go to state 27
    func_call  go to state 28
    varref     go to state 29
    lval       go to state 30


State 105

   13 struct_decl: STRUCT open decls close • IDENTIFIER

    IDENTIFIER  shift, and go to state 130


State 106

   14 array_decl: ARRAY TYPE_ID '[' INT_VAL • ']' IDENTIFIER

    ']'  shift, and go to state 131


State 107

   59 fact: '(' expr ')' •

    $default  reduce using rule 59 (fact)


State 108

   47 expr: expr LE addit •
   52 addit: addit • '+' term
   53      | addit • '-' term

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88

    $default  reduce using rule 47 (expr)


State 109

   48 expr: expr GE addit •
   52 addit: addit • '+' term
   53      | addit • '-' term

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88

    $default  reduce using rule 48 (expr)


State 110

   49 expr: expr AND addit •
   52 addit: addit • '+' term
   53      | addit • '-' term

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88

    $default  reduce using rule 49 (expr)


State 111

   50 expr: expr OR addit •
   52 addit: addit • '+' term
   53      | addit • '-' term

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88

    $default  reduce using rule 50 (expr)


State 112

   43 expr: expr EQUALS addit •
   52 addit: addit • '+' term
   53      | addit • '-' term

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88

    $default  reduce using rule 43 (expr)


State 113

   44 expr: expr NOT_EQUALS addit •
   52 addit: addit • '+' term
   53      | addit • '-' term

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88

    $default  reduce using rule 44 (expr)


State 114

   45 expr: expr '<' addit •
   52 addit: addit • '+' term
   53      | addit • '-' term

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88

    $default  reduce using rule 45 (expr)


State 115

   46 expr: expr '>' addit •
   52 addit: addit • '+' term
   53      | addit • '-' term
